some css fix to make the irc button visible again

--- a/pa_stats/scenes/irc/irc.css
+++ b/pa_stats/scenes/irc/irc.css
@@ -23,3 +23,5 @@
 	background: #282828;
 	color: #FFFFFF;
 }
+
+ .div-social-bar .content-wrapper {  display: inline; }
